--- a/Proyecto 2/CPU/db/Processor.lpc.html
+++ b/Proyecto 2/CPU/db/Processor.lpc.html
@@ -16,7 +16,103 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >cpu|dp|alu</TD>
+<TD >micro_arch|ram|altsyncram_component|auto_generated|mux5</TD>
+<TD >259</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >micro_arch|ram|altsyncram_component|auto_generated|mux4</TD>
+<TD >259</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >micro_arch|ram|altsyncram_component|auto_generated|decode3</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >micro_arch|ram|altsyncram_component|auto_generated|decode2</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >micro_arch|ram|altsyncram_component|auto_generated</TD>
+<TD >99</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >64</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >micro_arch|ram</TD>
+<TD >99</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >64</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >micro_arch|cpu|dp|alu</TD>
 <TD >66</TD>
 <TD >4</TD>
 <TD >0</TD>
@@ -32,7 +128,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu|dp|srcbmux</TD>
+<TD >micro_arch|cpu|dp|srcbmux</TD>
 <TD >65</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -48,7 +144,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu|dp|ext</TD>
+<TD >micro_arch|cpu|dp|ext</TD>
 <TD >26</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -64,7 +160,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu|dp|resmux</TD>
+<TD >micro_arch|cpu|dp|resmux</TD>
 <TD >65</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -80,7 +176,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu|dp|rf</TD>
+<TD >micro_arch|cpu|dp|rf</TD>
 <TD >78</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -96,7 +192,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu|dp|ra2mux</TD>
+<TD >micro_arch|cpu|dp|ra2mux</TD>
 <TD >9</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -112,7 +208,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu|dp|ra1mux</TD>
+<TD >micro_arch|cpu|dp|ra1mux</TD>
 <TD >9</TD>
 <TD >4</TD>
 <TD >0</TD>
@@ -128,7 +224,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu|dp|pcadd2</TD>
+<TD >micro_arch|cpu|dp|pcadd2</TD>
 <TD >64</TD>
 <TD >32</TD>
 <TD >0</TD>
@@ -144,7 +240,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu|dp|pcadd1</TD>
+<TD >micro_arch|cpu|dp|pcadd1</TD>
 <TD >64</TD>
 <TD >32</TD>
 <TD >0</TD>
@@ -160,7 +256,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu|dp|pcreg</TD>
+<TD >micro_arch|cpu|dp|pcreg</TD>
 <TD >34</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -176,7 +272,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu|dp|pcmux</TD>
+<TD >micro_arch|cpu|dp|pcmux</TD>
 <TD >65</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -192,7 +288,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu|dp</TD>
+<TD >micro_arch|cpu|dp</TD>
 <TD >76</TD>
 <TD >0</TD>
 <TD >8</TD>
@@ -208,7 +304,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu|c|cl|cc</TD>
+<TD >micro_arch|cpu|c|cl|cc</TD>
 <TD >8</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -224,7 +320,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu|c|cl|flagreg0</TD>
+<TD >micro_arch|cpu|c|cl|flagreg0</TD>
 <TD >5</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -240,7 +336,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu|c|cl|flagreg1</TD>
+<TD >micro_arch|cpu|c|cl|flagreg1</TD>
 <TD >5</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -256,7 +352,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu|c|cl</TD>
+<TD >micro_arch|cpu|c|cl</TD>
 <TD >15</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -272,7 +368,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu|c|dec</TD>
+<TD >micro_arch|cpu|c|dec</TD>
 <TD >12</TD>
 <TD >0</TD>
 <TD >1</TD>
@@ -288,7 +384,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu|c</TD>
+<TD >micro_arch|cpu|c</TD>
 <TD >26</TD>
 <TD >0</TD>
 <TD >4</TD>
@@ -304,12 +400,124 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >cpu</TD>
+<TD >micro_arch|cpu</TD>
 <TD >66</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >97</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >micro_arch|rom|altsyncram_component|auto_generated</TD>
+<TD >9</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >micro_arch|rom</TD>
+<TD >9</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >micro_arch</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >161</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >gen_grid|rectImage</TD>
+<TD >60</TD>
+<TD >40</TD>
+<TD >0</TD>
+<TD >40</TD>
+<TD >1</TD>
+<TD >40</TD>
+<TD >40</TD>
+<TD >40</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >gen_grid</TD>
+<TD >28</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >24</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >vgaCont</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >24</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >vga_pll</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
