--- a/Proyecto 2/CPU/db/Processor.lpc.html
+++ b/Proyecto 2/CPU/db/Processor.lpc.html
@@ -16,15 +16,47 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >mux_4_instance</TD>
+<TD >66</TD>
+<TD >34</TD>
+<TD >0</TD>
+<TD >34</TD>
+<TD >16</TD>
+<TD >34</TD>
+<TD >34</TD>
+<TD >34</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mux_2_instance</TD>
+<TD >33</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >16</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >zeroExtend_instance</TD>
 <TD >8</TD>
-<TD >24</TD>
-<TD >0</TD>
-<TD >24</TD>
 <TD >16</TD>
-<TD >24</TD>
-<TD >24</TD>
-<TD >24</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >16</TD>
+<TD >16</TD>
+<TD >16</TD>
+<TD >16</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -34,13 +66,13 @@
 <TR >
 <TD >signExtend_instance</TD>
 <TD >8</TD>
-<TD >24</TD>
+<TD >8</TD>
 <TD >0</TD>
-<TD >24</TD>
+<TD >8</TD>
 <TD >16</TD>
-<TD >24</TD>
-<TD >24</TD>
-<TD >24</TD>
+<TD >8</TD>
+<TD >8</TD>
+<TD >8</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -82,13 +114,13 @@
 <TR >
 <TD >ALU_instance</TD>
 <TD >34</TD>
-<TD >50</TD>
+<TD >34</TD>
 <TD >0</TD>
-<TD >50</TD>
+<TD >34</TD>
 <TD >16</TD>
-<TD >50</TD>
-<TD >50</TD>
-<TD >50</TD>
+<TD >34</TD>
+<TD >34</TD>
+<TD >34</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
