--- a/Proyecto 2/CPU/db/Processor.lpc.html
+++ b/Proyecto 2/CPU/db/Processor.lpc.html
@@ -16,15 +16,47 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >PCregister_instance</TD>
+<TD >18</TD>
+<TD >33</TD>
+<TD >0</TD>
+<TD >33</TD>
+<TD >16</TD>
+<TD >33</TD>
+<TD >33</TD>
+<TD >33</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >PCadder_instance</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >mux_4_instance</TD>
 <TD >66</TD>
-<TD >34</TD>
+<TD >18</TD>
 <TD >0</TD>
-<TD >34</TD>
+<TD >18</TD>
 <TD >16</TD>
-<TD >34</TD>
-<TD >34</TD>
-<TD >34</TD>
+<TD >18</TD>
+<TD >18</TD>
+<TD >18</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -114,13 +146,13 @@
 <TR >
 <TD >ALU_instance</TD>
 <TD >34</TD>
-<TD >34</TD>
+<TD >18</TD>
 <TD >0</TD>
-<TD >34</TD>
+<TD >18</TD>
 <TD >16</TD>
-<TD >34</TD>
-<TD >34</TD>
-<TD >34</TD>
+<TD >18</TD>
+<TD >18</TD>
+<TD >18</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
