Decodificador a la entrada de la memoria de datos

--- a/Proyecto 2/CPU/db/Processor.lpc.html
+++ b/Proyecto 2/CPU/db/Processor.lpc.html
@@ -16,6 +16,22 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >decoder_instance</TD>
+<TD >17</TD>
+<TD >49</TD>
+<TD >0</TD>
+<TD >49</TD>
+<TD >32</TD>
+<TD >49</TD>
+<TD >49</TD>
+<TD >49</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >PCregister_instance</TD>
 <TD >18</TD>
 <TD >33</TD>
