--- a/Proyecto 2/CPU/db/Processor.lpc.html
+++ b/Proyecto 2/CPU/db/Processor.lpc.html
@@ -192,6 +192,54 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >ALU_instance|comparator_inst</TD>
+<TD >32</TD>
+<TD >14</TD>
+<TD >0</TD>
+<TD >14</TD>
+<TD >16</TD>
+<TD >14</TD>
+<TD >14</TD>
+<TD >14</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >ALU_instance|negation_inst</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >ALU_instance|LogicalShiftLeft_inst</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >ALU_instance|u_subtractor</TD>
 <TD >32</TD>
 <TD >0</TD>
