--- a/Proyecto 2/CPU/db/Processor.lpc.html
+++ b/Proyecto 2/CPU/db/Processor.lpc.html
@@ -16,6 +16,38 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >control_inst</TD>
+<TD >6</TD>
+<TD >13</TD>
+<TD >0</TD>
+<TD >13</TD>
+<TD >12</TD>
+<TD >13</TD>
+<TD >13</TD>
+<TD >13</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >shift_inst</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >MemoryWriteback_register_instance</TD>
 <TD >34</TD>
 <TD >0</TD>
@@ -33,14 +65,14 @@
 </TR>
 <TR >
 <TD >ExecuteMemory_register_instance</TD>
-<TD >36</TD>
+<TD >38</TD>
+<TD >41</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >35</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >41</TD>
+<TD >37</TD>
+<TD >41</TD>
+<TD >41</TD>
+<TD >41</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -49,14 +81,14 @@
 </TR>
 <TR >
 <TD >DecodeExecute_register_instance</TD>
-<TD >6</TD>
+<TD >9</TD>
+<TD >15</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >5</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >15</TD>
+<TD >8</TD>
+<TD >15</TD>
+<TD >15</TD>
+<TD >15</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -273,14 +305,14 @@
 </TR>
 <TR >
 <TD >ALU_instance</TD>
-<TD >34</TD>
-<TD >18</TD>
+<TD >35</TD>
+<TD >17</TD>
 <TD >0</TD>
+<TD >17</TD>
 <TD >18</TD>
-<TD >16</TD>
-<TD >18</TD>
-<TD >18</TD>
-<TD >18</TD>
+<TD >17</TD>
+<TD >17</TD>
+<TD >17</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
