--- a/Proyecto 2/CPU/db/Processor.lpc.html
+++ b/Proyecto 2/CPU/db/Processor.lpc.html
@@ -16,295 +16,7 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >CPU|mux_2_writeback</TD>
-<TD >33</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|MemoryWriteback_register</TD>
-<TD >35</TD>
-<TD >15</TD>
-<TD >0</TD>
-<TD >15</TD>
-<TD >34</TD>
-<TD >15</TD>
-<TD >15</TD>
-<TD >15</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|mux_2_memory</TD>
-<TD >33</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|decoderMemory</TD>
-<TD >17</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|ExecuteMemory_register</TD>
-<TD >39</TD>
-<TD >2</TD>
-<TD >0</TD>
-<TD >2</TD>
-<TD >38</TD>
-<TD >2</TD>
-<TD >2</TD>
-<TD >2</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|decoder</TD>
-<TD >17</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|ALU_memory|comparator_inst</TD>
-<TD >32</TD>
-<TD >14</TD>
-<TD >0</TD>
-<TD >14</TD>
-<TD >16</TD>
-<TD >14</TD>
-<TD >14</TD>
-<TD >14</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|ALU_memory|negation_inst</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|ALU_memory|LogicalShiftLeft_inst</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|ALU_memory|u_subtractor</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|ALU_memory|u_adder</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|ALU_memory</TD>
-<TD >35</TD>
-<TD >0</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >18</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|DecodeExecute_register</TD>
-<TD >43</TD>
-<TD >2</TD>
-<TD >0</TD>
-<TD >2</TD>
-<TD >42</TD>
-<TD >2</TD>
-<TD >2</TD>
-<TD >2</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|mux_4</TD>
-<TD >66</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|regfile</TD>
-<TD >30</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >48</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|zeroExtend</TD>
-<TD >8</TD>
-<TD >8</TD>
-<TD >0</TD>
-<TD >8</TD>
-<TD >16</TD>
-<TD >8</TD>
-<TD >8</TD>
-<TD >8</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|signExtend</TD>
-<TD >8</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|control_unit</TD>
-<TD >6</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >1</TD>
-<TD >13</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|FetchDecode_register</TD>
+<TD >CPU|FetchDecode_register_instance</TD>
 <TD >17</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -320,119 +32,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ALU_fetch|comparator_inst</TD>
-<TD >32</TD>
-<TD >14</TD>
-<TD >0</TD>
-<TD >14</TD>
-<TD >16</TD>
-<TD >14</TD>
-<TD >14</TD>
-<TD >14</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|ALU_fetch|negation_inst</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|ALU_fetch|LogicalShiftLeft_inst</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|ALU_fetch|u_subtractor</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|ALU_fetch|u_adder</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|ALU_fetch</TD>
-<TD >35</TD>
-<TD >19</TD>
-<TD >0</TD>
-<TD >19</TD>
-<TD >18</TD>
-<TD >19</TD>
-<TD >19</TD>
-<TD >19</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|mux_2_fetch</TD>
-<TD >33</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|ROM|altsyncram_component|auto_generated|mux2</TD>
+<TD >CPU|ROM_instance|altsyncram_component|auto_generated|mux2</TD>
 <TD >131</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -448,7 +48,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ROM|altsyncram_component|auto_generated|rden_decode</TD>
+<TD >CPU|ROM_instance|altsyncram_component|auto_generated|rden_decode</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -464,7 +64,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ROM|altsyncram_component|auto_generated</TD>
+<TD >CPU|ROM_instance|altsyncram_component|auto_generated</TD>
 <TD >17</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -480,8 +80,40 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ROM</TD>
+<TD >CPU|ROM_instance</TD>
 <TD >17</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|mux_2_instance</TD>
+<TD >33</TD>
+<TD >15</TD>
+<TD >0</TD>
+<TD >15</TD>
+<TD >16</TD>
+<TD >15</TD>
+<TD >15</TD>
+<TD >15</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|PCadder_instance</TD>
+<TD >16</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -498,29 +130,13 @@
 <TR >
 <TD >CPU|PCregister_instance</TD>
 <TD >18</TD>
-<TD >1</TD>
 <TD >0</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >16</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU|PCadder_instance</TD>
-<TD >16</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >32</TD>
-<TD >16</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -529,11 +145,11 @@
 </TR>
 <TR >
 <TD >CPU</TD>
-<TD >2</TD>
-<TD >0</TD>
-<TD >1</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
