--- a/Proyecto 2/CPU/db/Processor.lpc.html
+++ b/Proyecto 2/CPU/db/Processor.lpc.html
@@ -16,6 +16,102 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >CPU|DecodeExecute_register_instance</TD>
+<TD >45</TD>
+<TD >30</TD>
+<TD >0</TD>
+<TD >30</TD>
+<TD >44</TD>
+<TD >30</TD>
+<TD >30</TD>
+<TD >30</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|mux_4_instance</TD>
+<TD >66</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|regfile_instance</TD>
+<TD >30</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >48</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|zeroExtend_instance</TD>
+<TD >8</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >16</TD>
+<TD >8</TD>
+<TD >8</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|signExtend_instance</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|control_unit_instance</TD>
+<TD >6</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >15</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >CPU|FetchDecode_register_instance</TD>
 <TD >17</TD>
 <TD >0</TD>
@@ -98,13 +194,13 @@
 <TR >
 <TD >CPU|mux_2_instance</TD>
 <TD >33</TD>
-<TD >15</TD>
 <TD >0</TD>
-<TD >15</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >16</TD>
-<TD >15</TD>
-<TD >15</TD>
-<TD >15</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
