--- a/Proyecto 2/CPU/db/Processor.lpc.html
+++ b/Proyecto 2/CPU/db/Processor.lpc.html
@@ -16,12 +16,156 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >CPU|ExecuteMemory_register_instance</TD>
+<TD >41</TD>
+<TD >31</TD>
+<TD >0</TD>
+<TD >31</TD>
+<TD >40</TD>
+<TD >31</TD>
+<TD >31</TD>
+<TD >31</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|u_mux_2</TD>
+<TD >33</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|decoder_instance</TD>
+<TD >17</TD>
+<TD >15</TD>
+<TD >0</TD>
+<TD >15</TD>
+<TD >32</TD>
+<TD >15</TD>
+<TD >15</TD>
+<TD >15</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|ALU_instance|comparator_inst</TD>
+<TD >32</TD>
+<TD >14</TD>
+<TD >0</TD>
+<TD >14</TD>
+<TD >16</TD>
+<TD >14</TD>
+<TD >14</TD>
+<TD >14</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|ALU_instance|negation_inst</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|ALU_instance|LogicalShiftLeft_inst</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|ALU_instance|u_subtractor</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|ALU_instance|u_adder</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|ALU_instance</TD>
+<TD >35</TD>
+<TD >30</TD>
+<TD >1</TD>
+<TD >30</TD>
+<TD >18</TD>
+<TD >30</TD>
+<TD >30</TD>
+<TD >30</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >CPU|DecodeExecute_register_instance</TD>
-<TD >45</TD>
+<TD >46</TD>
 <TD >30</TD>
 <TD >0</TD>
 <TD >30</TD>
-<TD >44</TD>
+<TD >45</TD>
 <TD >30</TD>
 <TD >30</TD>
 <TD >30</TD>
@@ -101,7 +245,7 @@
 <TD >1</TD>
 <TD >0</TD>
 <TD >1</TD>
-<TD >15</TD>
+<TD >16</TD>
 <TD >1</TD>
 <TD >1</TD>
 <TD >1</TD>
