--- a/Proyecto 2/CPU/db/Processor.lpc.html
+++ b/Proyecto 2/CPU/db/Processor.lpc.html
@@ -16,6 +16,230 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >CPU|mux_2_instance_writeback</TD>
+<TD >33</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|MemoryWriteback_register_instance</TD>
+<TD >35</TD>
+<TD >15</TD>
+<TD >0</TD>
+<TD >15</TD>
+<TD >34</TD>
+<TD >15</TD>
+<TD >15</TD>
+<TD >15</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|ram_instance|altsyncram_component|auto_generated|mux5</TD>
+<TD >67</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|ram_instance|altsyncram_component|auto_generated|mux4</TD>
+<TD >67</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|ram_instance|altsyncram_component|auto_generated|rden_decode_b</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|ram_instance|altsyncram_component|auto_generated|rden_decode_a</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|ram_instance|altsyncram_component|auto_generated|decode3</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|ram_instance|altsyncram_component|auto_generated|decode2</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|ram_instance|altsyncram_component|auto_generated</TD>
+<TD >51</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|ram_instance</TD>
+<TD >51</TD>
+<TD >15</TD>
+<TD >0</TD>
+<TD >15</TD>
+<TD >16</TD>
+<TD >15</TD>
+<TD >15</TD>
+<TD >15</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|ram_coordenadas_instance|altsyncram_component|auto_generated</TD>
+<TD >23</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|ram_coordenadas_instance</TD>
+<TD >23</TD>
+<TD >15</TD>
+<TD >0</TD>
+<TD >15</TD>
+<TD >8</TD>
+<TD >15</TD>
+<TD >15</TD>
+<TD >15</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|mux_2_instance_memory</TD>
+<TD >33</TD>
+<TD >15</TD>
+<TD >0</TD>
+<TD >15</TD>
+<TD >16</TD>
+<TD >15</TD>
+<TD >15</TD>
+<TD >15</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|decoderMemory_3outs_instance</TD>
+<TD >18</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >48</TD>
+<TD >16</TD>
+<TD >16</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >CPU|ExecuteMemory_register_instance</TD>
 <TD >41</TD>
 <TD >31</TD>
@@ -336,15 +560,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|mux_2_instance</TD>
+<TD >CPU|mux_2_instance_fetch</TD>
 <TD >33</TD>
+<TD >15</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >15</TD>
 <TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >15</TD>
+<TD >15</TD>
+<TD >15</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
