--- a/Proyecto 2/CPU/db/Processor.lpc.html
+++ b/Proyecto 2/CPU/db/Processor.lpc.html
@@ -33,14 +33,14 @@
 </TR>
 <TR >
 <TD >CPU|MemoryWriteback_register_instance</TD>
-<TD >35</TD>
-<TD >15</TD>
-<TD >0</TD>
-<TD >15</TD>
-<TD >34</TD>
-<TD >15</TD>
-<TD >15</TD>
-<TD >15</TD>
+<TD >37</TD>
+<TD >16</TD>
+<TD >1</TD>
+<TD >16</TD>
+<TD >36</TD>
+<TD >16</TD>
+<TD >16</TD>
+<TD >16</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -241,11 +241,11 @@
 </TR>
 <TR >
 <TD >CPU|ExecuteMemory_register_instance</TD>
-<TD >41</TD>
+<TD >43</TD>
 <TD >31</TD>
 <TD >0</TD>
 <TD >31</TD>
-<TD >40</TD>
+<TD >42</TD>
 <TD >31</TD>
 <TD >31</TD>
 <TD >31</TD>
@@ -385,11 +385,11 @@
 </TR>
 <TR >
 <TD >CPU|DecodeExecute_register_instance</TD>
-<TD >46</TD>
+<TD >48</TD>
 <TD >30</TD>
 <TD >0</TD>
 <TD >30</TD>
-<TD >45</TD>
+<TD >47</TD>
 <TD >30</TD>
 <TD >30</TD>
 <TD >30</TD>
@@ -425,6 +425,22 @@
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >CPU|u_mux_2_regfile</TD>
+<TD >33</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >16</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -469,7 +485,7 @@
 <TD >4</TD>
 <TD >0</TD>
 <TD >4</TD>
-<TD >16</TD>
+<TD >17</TD>
 <TD >4</TD>
 <TD >4</TD>
 <TD >4</TD>
