--- a/Proyecto 2/CPU/db/Processor.lpc.html
+++ b/Proyecto 2/CPU/db/Processor.lpc.html
@@ -16,7 +16,7 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >CPU|mux_2_instance_writeback</TD>
+<TD >mux_2_instance_writeback</TD>
 <TD >33</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -32,7 +32,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|MemoryWriteback_register_instance</TD>
+<TD >MemoryWriteback_register_instance</TD>
 <TD >41</TD>
 <TD >16</TD>
 <TD >1</TD>
@@ -48,7 +48,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ram_instance|altsyncram_component|auto_generated|mux5</TD>
+<TD >ram_instance|altsyncram_component|auto_generated|mux5</TD>
 <TD >67</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -64,7 +64,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ram_instance|altsyncram_component|auto_generated|mux4</TD>
+<TD >ram_instance|altsyncram_component|auto_generated|mux4</TD>
 <TD >67</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -80,7 +80,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ram_instance|altsyncram_component|auto_generated|rden_decode_b</TD>
+<TD >ram_instance|altsyncram_component|auto_generated|rden_decode_b</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -96,7 +96,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ram_instance|altsyncram_component|auto_generated|rden_decode_a</TD>
+<TD >ram_instance|altsyncram_component|auto_generated|rden_decode_a</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -112,7 +112,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ram_instance|altsyncram_component|auto_generated|decode3</TD>
+<TD >ram_instance|altsyncram_component|auto_generated|decode3</TD>
 <TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -128,7 +128,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ram_instance|altsyncram_component|auto_generated|decode2</TD>
+<TD >ram_instance|altsyncram_component|auto_generated|decode2</TD>
 <TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -144,7 +144,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ram_instance|altsyncram_component|auto_generated</TD>
+<TD >ram_instance|altsyncram_component|auto_generated</TD>
 <TD >51</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -160,7 +160,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ram_instance</TD>
+<TD >ram_instance</TD>
 <TD >51</TD>
 <TD >16</TD>
 <TD >0</TD>
@@ -176,7 +176,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ram_coordenadas_instance|altsyncram_component|auto_generated</TD>
+<TD >ram_coordenadas_instance|altsyncram_component|auto_generated</TD>
 <TD >23</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -192,7 +192,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ram_coordenadas_instance</TD>
+<TD >ram_coordenadas_instance</TD>
 <TD >23</TD>
 <TD >15</TD>
 <TD >0</TD>
@@ -208,7 +208,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|mux_2_instance_memory</TD>
+<TD >mux_2_instance_memory</TD>
 <TD >33</TD>
 <TD >15</TD>
 <TD >0</TD>
@@ -224,7 +224,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|decoderMemory_3outs_instance</TD>
+<TD >decoderMemory_3outs_instance</TD>
 <TD >18</TD>
 <TD >16</TD>
 <TD >0</TD>
@@ -240,7 +240,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ExecuteMemory_register_instance</TD>
+<TD >ExecuteMemory_register_instance</TD>
 <TD >47</TD>
 <TD >31</TD>
 <TD >0</TD>
@@ -256,7 +256,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|u_mux_2</TD>
+<TD >u_mux_2</TD>
 <TD >33</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -272,7 +272,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|decoder_instance</TD>
+<TD >decoder_instance</TD>
 <TD >17</TD>
 <TD >15</TD>
 <TD >0</TD>
@@ -288,7 +288,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ALU_instance|comparator_inst</TD>
+<TD >ALU_instance|comparator_inst</TD>
 <TD >32</TD>
 <TD >14</TD>
 <TD >0</TD>
@@ -304,7 +304,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ALU_instance|negation_inst</TD>
+<TD >ALU_instance|negation_inst</TD>
 <TD >16</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -320,7 +320,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ALU_instance|LogicalShiftLeft_inst</TD>
+<TD >ALU_instance|LogicalShiftLeft_inst</TD>
 <TD >32</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -336,7 +336,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ALU_instance|u_subtractor</TD>
+<TD >ALU_instance|u_subtractor</TD>
 <TD >32</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -352,7 +352,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ALU_instance|u_adder</TD>
+<TD >ALU_instance|u_adder</TD>
 <TD >32</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -368,10 +368,10 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ALU_instance</TD>
+<TD >ALU_instance</TD>
 <TD >35</TD>
 <TD >30</TD>
-<TD >1</TD>
+<TD >0</TD>
 <TD >30</TD>
 <TD >18</TD>
 <TD >30</TD>
@@ -384,7 +384,23 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|DecodeExecute_register_instance</TD>
+<TD >mux_2_instance_alu_or_address</TD>
+<TD >33</TD>
+<TD >15</TD>
+<TD >0</TD>
+<TD >15</TD>
+<TD >16</TD>
+<TD >15</TD>
+<TD >15</TD>
+<TD >15</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >DecodeExecute_register_instance</TD>
 <TD >52</TD>
 <TD >30</TD>
 <TD >0</TD>
@@ -400,7 +416,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|mux_4_instance</TD>
+<TD >mux_4_instance</TD>
 <TD >66</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -416,15 +432,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|regfile_instance</TD>
+<TD >regfile_instance</TD>
 <TD >30</TD>
+<TD >3</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >3</TD>
 <TD >48</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -432,7 +448,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|u_mux_2_regfile</TD>
+<TD >u_mux_2_regfile</TD>
 <TD >9</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -448,7 +464,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|zeroExtend_instance</TD>
+<TD >zeroExtend_instance</TD>
 <TD >8</TD>
 <TD >8</TD>
 <TD >0</TD>
@@ -464,7 +480,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|signExtend_instance</TD>
+<TD >signExtend_instance</TD>
 <TD >8</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -480,10 +496,10 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|control_unit_instance</TD>
+<TD >control_unit_instance</TD>
 <TD >6</TD>
 <TD >4</TD>
-<TD >0</TD>
+<TD >2</TD>
 <TD >4</TD>
 <TD >17</TD>
 <TD >4</TD>
@@ -496,7 +512,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|FetchDecode_register_instance</TD>
+<TD >FetchDecode_register_instance</TD>
 <TD >17</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -512,7 +528,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ROM_instance|altsyncram_component|auto_generated|mux2</TD>
+<TD >ROM_instance|altsyncram_component|auto_generated|mux2</TD>
 <TD >131</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -528,7 +544,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ROM_instance|altsyncram_component|auto_generated|rden_decode</TD>
+<TD >ROM_instance|altsyncram_component|auto_generated|rden_decode</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -544,7 +560,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ROM_instance|altsyncram_component|auto_generated</TD>
+<TD >ROM_instance|altsyncram_component|auto_generated</TD>
 <TD >17</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -560,7 +576,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|ROM_instance</TD>
+<TD >ROM_instance</TD>
 <TD >17</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -576,7 +592,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|mux_2_instance_fetch</TD>
+<TD >mux_2_instance_fetch</TD>
 <TD >33</TD>
 <TD >15</TD>
 <TD >0</TD>
@@ -592,7 +608,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|PCadder_instance</TD>
+<TD >PCadder_instance</TD>
 <TD >16</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -608,92 +624,12 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >CPU|PCregister_instance</TD>
+<TD >PCregister_instance</TD>
 <TD >18</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >16</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >CPU</TD>
-<TD >5</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >8</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >gen_grid|rectImage</TD>
-<TD >60</TD>
-<TD >40</TD>
-<TD >0</TD>
-<TD >40</TD>
-<TD >1</TD>
-<TD >40</TD>
-<TD >40</TD>
-<TD >40</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >gen_grid</TD>
-<TD >28</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >24</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >vgaCont</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >24</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >vga_pll</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
